[project]
name = "call-me-maybe"
version = "0.1.0"
requires-python = "==3.8"
dependencies = [
    "torch",
    "llm-sdk",
    "pydantic",
    "numpy",
    "flake8",
    "mypy"
]

[tool.uv]
package = false

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.mypy]
exclude = ["llm_sdk/"]

[flake8]
exclude = "llm_sdk/"